# L2chain

./: Cargo.toml  README.md
baseline/: Cargo.toml
baseline/src/: node.rs
baseline/src/behavior/: commit.rs  propose.rs  verify.rs
baseline/src/network/pow/: client.rs  miner.rs
baseline/src/network/raft/: rpc.rs
chain/: Cargo.toml
chain/src/: access_map.rs  config.rs  role.rs
common-utils/: Cargo.toml
configs/baseline/nodes/: pow_example.toml
core/: Cargo.toml
l2chain/: Cargo.toml
l2chain/src/: inspect.rs  node.rs
network/: Cargo.toml
scripts/: barchart.py  figures.py  install_sgx_driver.sh
scripts/figures/: cross_app_lat.py  cross_app_tps.py  dapp_lat.py  dapp_tps.py  workload_lat.py  workload_tps.py
tx-engine/: Cargo.toml
tx-engine-tee/: Cargo.toml
tx-engine-tee/src/: config.rs  engine.rs  ocall.rs  tests.rs
tx-executor/: Cargo.toml
tx-executor/src/: lib.rs
witness_cache/src/: exps.rs  main.rs
