[package]
name = "tx-engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
core = { path = "../core" }
tx-state = { path = "../tx-state" }
common-utils = { path = "../common-utils" }
tokio = { version = "1.11", features = ["full", "parking_lot"] }
tracing = "0.1"
